[package]
name = "slippy-map-tiles"
version = "0.1.0"
authors = ["Rory McCann <rory@technomancy.org>"]
license = "AGPL-3.0"
repository = "https://github.com/rory/slippy-map-tiles-rs"
description = "Work with Slippy map tile names, found in OpenStreetMap"
keywords = ["openstreetmap", "osm"]

[dependencies]
