[package]
authors = ["Rory McCann <rory@technomancy.org>"]
description = "Work with Slippy map tile names, found in OpenStreetMap"
keywords = ["openstreetmap", "osm"]
license = "GPL-3.0"
name = "slippy-map-tiles"
repository = "https://github.com/rory/slippy-map-tiles-rs"
version = "0.10.0"

[dependencies]
lazy_static = "0.1.15"
regex = "0.1.55"
